[metadata]
name = keyrings.efile 
version = attr: keyrings.efile.__version__
author = Gerard 
author_email = gweatherby@uchc.edu 
url = https://github.com/NMRhub/keyrings.efile.git 
description = Encrypted keyfile without password 
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT license 
classifier = 
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12

[options]
#include_package_data = True
package_dir = 
	= src
packages = 
	keyrings.efile
install_requires =
	filelock
	keyring
	properties
	pycryptodome

[options.entry_points]
keyring.backends =
    efile = keyrings.efile.encryptedfile


[build_ext]
debug = 1

[classifiers]

#[options.package_data]
#example = data/schema.json, *.txt
#* = README.md

